test/runtime/fail/fn/missing_terminator.hy

// expect error: Expected `\)` after function declaration arguments, found `{`

fn test(hello {

}
